# Open_Graph

./: .env.example  .flake8  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  data.json  docker-compose.yml  formatter_json.py  mypy.ini  pyproject.toml  query_sql.sql
.github/workflows/: ci-cd.yml
api/v1/collection_api/: apis.py  urls.py
api/v1/link_api/: apis.py  urls.py
api/v1/user_api/: apis.py  urls.py
apps/collection/: admin.py  models.py  selectors.py  services.py
apps/links/: admin.py  models.py  selectors.py  services.py
apps/users/: admin.py  managers.py  models.py  services.py
core/: exc_handler.py  exceptions.py  settings.py  urls.py  utils.py
